{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Gameplay",
            "id": "30316325-1e46-48fd-ae3d-b4f28121eaad",
            "actions": [
                {
                    "name": "ChangeDirUp",
                    "type": "Button",
                    "id": "473fd385-f077-47db-b3ec-630e6882d423",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeDirDown",
                    "type": "Button",
                    "id": "02f0b279-e7d2-4785-956e-a225566bfa30",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeDirLeft",
                    "type": "Button",
                    "id": "3120a260-870a-41c3-a36b-f697cf712a1c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeDirRight",
                    "type": "Button",
                    "id": "149994cf-ae22-4fc7-9939-20b74cd4d0a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3a3dd1f-0284-4247-93d1-50326ffd05a0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0de4fd82-5315-4d28-86a5-7aca1c896c9a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4128d5a-7bca-422d-959c-130abe2efba4",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ChangeDirUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65686cc7-20e6-4d3a-889e-43490b61af02",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "378ee50e-3782-43f0-929b-9b8d4fe839b1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "065926ba-70f4-4daa-a73c-4bea9d9f2918",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ChangeDirDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20cef06d-d44c-4056-bf29-e36a326f90f8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "797c09b0-332c-4861-a36d-ca231a4dd94f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8d211b2-7f1d-4c73-8cf6-7c5307123d96",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ChangeDirLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00de2bf4-4181-4f28-931b-8dc1a9834ed9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb429abf-4dfe-4996-9746-8a1d9973d8b6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeDirRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6984699e-a89b-4b3d-887d-5c78c6d7beb0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ChangeDirRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "39e0fd3d-3dcb-4ba1-92fc-65d6207d54de",
            "actions": [
                {
                    "name": "MenuUp",
                    "type": "Button",
                    "id": "41903108-73cc-4c7d-998e-4317ae6331e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MenuDown",
                    "type": "Button",
                    "id": "e49b9bf7-65f4-42c6-a9dc-4ce44847ab3a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70882458-00b5-436d-bddd-842b96a8fcf1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MenuUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5c72447-30d1-47ab-9be8-26e84c948456",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MenuUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8405179-2b0c-41a5-9d3f-b4108bca997c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MenuDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8654bc71-cb1d-412b-b9e8-c85355f72efa",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MenuDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}